samples/_failures_safe/1761466892_7beddd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed3d275e.c: In function ‘main’:
./samples/SAFE/__tmp_ed3d275e.c:128:5: error: expected declaration or statement at end of input
  128 |     printf("\nMatrix A:\n");
      |     ^~~~~~
